# clawguandan

./: .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  TODO.md  dist-workspace.toml  release.toml
.github/workflows/: ci.yml  release.yml
doc/: design.md  guandan_rules_cn.md  guandan_rules_en.md  guandan_rules_zh.md
hermes-skills/guandan/: SKILL.md
hermes-skills/guandan/references/: subagent_mode.md
hermes-skills/guandan/scripts/: run.sh
openclaw-skills/guandan/: SKILL.md
openclaw-skills/guandan-full/: SKILL.md
openclaw-skills/guandan-full/references/: subagent_mode.md
openclaw-skills/guandan-full/scripts/: run.sh
openclaw-skills/guandan/references/: subagent_mode.md
openclaw-skills/guandan/scripts/: run.sh
scripts/: ask_llm.example.sh
skills/guandan/: SKILL.md  SKILL_zh.md
src/: api.rs  cli.rs  domain.rs  error.rs  lan_addrs.rs  lib.rs  main.rs  platform_process.rs  server_runtime.rs  store.rs  web_assets.rs
src/bot/: mod.rs  plugin.rs  policies.rs  runtime.rs
src/bot/plugins/: beat_it.rs  mod.rs
src/game/: card.rs  deck.rs  engine.rs  mod.rs  test_support.rs  types.rs
src/game/rules/: mod.rs  (+6 more)
src/prompt/: mod.rs  prompt_builder.rs
src/simulation/: cli.rs  engine.rs  http.rs  mod.rs
src/strategy/: mod.rs  movegen.rs  observation.rs  presets.rs  suggest.rs  traits.rs
tests/: error_boundaries.rs  four_player_sim.rs  full_hand_endgame.rs  integration_api.rs  mvp_flow.rs  property_rules.rs  simulate_cliplay.rs
web/: app.js  i18n.js  index.html  state_replay.js  styles.css
web/rules/: rules_en.md  rules_zh.md
(+19 files in other folders)
