[package]
name = "clawguandan"
version = "0.1.0-beta.0"
edition = "2024"
repository = "https://github.com/mikewei/claw-guandan"

[features]
default = []
test-utils = []

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
rand = "0.9"
regex = "1"
http-body-util = "0.1"
libc = "0.2"
rust-embed = "8"

[dev-dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
proptest = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
